--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body{
 }
 
 #app {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display:flex;
     align-items: center;
     flex-direction: column;
@@ -101,5 +101,33 @@ table {
 h2 {
     color: white;
 }
+
+@media only screen and (max-width: 600px) {
+
+    #app {
+        justify-content: center;
+    }
+
+    .title {
+        font-size:40px;
+    } 
+
+    .button {
+        font-size:45px;
+        width: 250px;
+        height: 150px;
+        margin-top:0px;
+    }
+
+    .difficulty {
+        width: 330px;
+        margin-top:135px;
+    }
+
+    td {
+        width: 100px;
+        height: 150px;
+    }
+  }
 
 
